--- a/_posts/Algorithm/DataStructure/2020-12-27-BOJ_1026_보물.md
+++ b/_posts/Algorithm/DataStructure/2020-12-27-BOJ_1026_보물.md
@@ -1,3 +1,18 @@
+---
+title:  BOJ 1026 보물
+
+search: true
+
+categories:
+  - DataStructure
+  
+tags: 
+  - [Algorithm, Coding Test, Array, Sort, Data Structure]
+
+last_modified_at: 2020-12-27
+---
+
+
 1. 변수
 
    ```java
