--- a/_posts/Algorithm/DataStructure/2020-12-27-BOJ_10814_나이순정렬.md
+++ b/_posts/Algorithm/DataStructure/2020-12-27-BOJ_10814_나이순정렬.md
@@ -1,3 +1,19 @@
+---
+title:  BOJ 10814 나이순 정렬
+
+search: true
+
+categories:
+  - DataStructure
+  
+tags: 
+  - [Algorithm, Coding Test, Sort, Priority Queue, Data Structure]
+
+last_modified_at: 2020-12-27
+---
+
+
+
 1. 변수
 
    ```java
