--- a/_posts/Algorithm/DataStructure/2020-12-27-BOJ_1927_최소힙.md
+++ b/_posts/Algorithm/DataStructure/2020-12-27-BOJ_1927_최소힙.md
@@ -1,3 +1,19 @@
+---
+title:  BOJ 1927 최소힙
+
+search: true
+
+categories:
+  - DataStructure
+  
+tags: 
+  - [Algorithm, Coding Test, Priority Queue, Data Structure]
+
+last_modified_at: 2020-12-27
+---
+
+
+
 1. 변수
 
    ```java
